--- a/color.html
+++ b/color.html
@@ -1,10 +1,8 @@
 <html>
-<!--
-<body text="blue" bgcolor="green">
-<body text="#0000FF" bgcolor="#00FF00">
--->
-<body text="rgb(0,0,50)" bgcolor="rgb(255,255,0)">
-<p><h1>hi hello welcome 
-have a nice day</h1></p>
+<body>
+<h1 style="background-color:Tomato;">tomato</h1>
+<h1 style="background-color:orange;">orange</h1>
+<h1 style="background-color:dogerblue;">dogerblue</h1>
+<h1 style="background-color:violet;">violet</h1>
 </body>
 </html>
