--- a/colfram.html
+++ b/colfram.html
@@ -3,24 +3,8 @@
 <title>
 html frames</title>
 </head>
-<frameset rows="40%,60%">
+<frameset cols="40%,60%">
 <frame name="top" src="mylogin.html"/>
 <frame name="main" src="login.html"/>
 </frameset>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
