--- a/index.html
+++ b/index.html
@@ -1,15 +1,43 @@
 <html lang="en">
-<head>
-<title>CRUD.JS</title>
+<head> <title>CRUD-JS</title>
 <link rel="stylesheet" href="css/style.css">
 <script src="JS/script.js"></script>
 </head>
-<body><CENTER><h2>Student Records</h2></CENTER>
-<table border=0.9>
+<body>
+<CENTER><h2>Student Records</h2></CENTER>
+<table>
 <tr>
-<td> from </td>
-<td>outputTable</td>
+<td>
+<form onsubmit="event.preventDefault();onFormSubmit();" autocomplete="off">
+<h3>Student Form</h3>
+<div>
+<label>Full Name</label>
+<input type="text" name="userName" id="userName">
+</div>
+<div>
+    <label>Designation</label>
+    <input type="text" name="designation" id="designation">
+    </div>
+<div class="form-action-buttons">
+<input type="submit" value="Submit">
+</div>
+</form>
+</td>
+<td>
+<table class="list" id="stdlist" style="background-color:#C2976D;">
+<thead>
+<tr>
+<th>Full Name</th>
+<th>Action</th>
+</tr>
+</thead>
+<tbody></tbody>
+</table>
+</td>
 </tr>
 </table>
 </body>
 </html>
+
+
+
