--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head> <title>CRUD-JS</title>
 <link rel="stylesheet" href="css/style.css">
-<script src="JS/script.js"></script>
+<script src="js/script.js"></script>
 </head>
 <body>
 <CENTER><h2>Student Records</h2></CENTER>
@@ -18,6 +18,10 @@
     <label>Designation</label>
     <input type="text" name="designation" id="designation">
     </div>
+    <div>
+        <label>Salary</label>
+        <input type="text" name="salary" id="salary">
+        </div>
 <div class="form-action-buttons">
 <input type="submit" value="Submit">
 </div>
@@ -28,6 +32,8 @@
 <thead>
 <tr>
 <th>Full Name</th>
+<th>Designation</th>
+<th>Salary</th>
 <th>Action</th>
 </tr>
 </thead>
